# ultimate

./: Cargo.toml  README.md
core/: Cargo.toml
repo-orm/: Cargo.toml
src/: main.rs  schema.rs
src/starwars/: mod.rs  model.rs
ultimate/: Cargo.toml
ultimate-cli/: Cargo.toml
ultimate-cli/src/: cli.yml  main.rs
ultimate-cli/src/template/: Cargo.toml.hbs
ultimate/src/: lib.rs
