[package]
name = "again"
version = "0.1.0"
authors = ["Rex Isaac Raphael <rex.raphael@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["core", "repo-orm", "ultimate", "ultimate-cli"]

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
async-graphql = "1.7.6"
graphql-parser = "=0.2.3"
async-graphql-actix-web = "0.7.6"
protobuf = { version = "2", features = ["with-bytes"] }
futures = "0.3.4"
chrono = "0.4.11"
slab = "0.4.2"
built = "0.4.0"

juniper = "0.14.2"
env_logger = "0.7.1"
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"