[package]
name = "ultimate-cli"
version = "0.1.0"
authors = ["Rex Isaac Raphael <rex.raphael@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {git = "https://github.com/clap-rs/clap/", features = ["yaml"]}
console = "0.10.0"